Fix search button on iOS

--- a/src/static/css/almanac.css
+++ b/src/static/css/almanac.css
@@ -581,6 +581,7 @@ header .cta {
 
 .search-button svg {
   fill: #000;
+  color: #000
 }
 
 .table-of-contents-switcher:hover,
